--- a/Devs/src/main/resources/application.properties
+++ b/Devs/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 #suppress inspection"UnusedProperty"
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Northwind
+spring.datasource.url=jdbc:postgresql://localhost:5432/programmingLanguage
 #suppress inspection"UnusedProperty"
 
 spring.datasource.username=postgres
 #suppress inspection"UnusedProperty"
 
-spring.datasource.password=12345
+spring.datasource.password=1905
 #suppress inspection"UnusedProperty"
 
 spring.jpa.properties.javax.persistence.validation.mode = none
